# openA2b

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_zh.md
.github/workflows/: ci.yml
core/: a2b_audio.c  a2b_clock.c  a2b_device.c  a2b_diagnostic.c  a2b_discovery.c  a2b_error.c  a2b_irq.c  a2b_logger.c  a2b_main.c  a2b_network.c  a2b_recovery.c  a2b_remote.c  a2b_slot.c  a2b_state.c
docs/: Doxyfile.in  api_reference.md  architecture.md  phase1_complete.md  phase2_complete.md  phase3_complete.md  phase4_complete.md
docs/plantuml/: discovery_sequence.puml  routing_diagram.puml  state_machine.puml
docs/superpowers/plans/: 2026-06-30-OpenA2B-phase1-foundation.md  2026-06-30-OpenA2B-phase2-core.md  2026-06-30-OpenA2B-phase4-polish.md
docs/superpowers/specs/: 2026-06-30-OpenA2B-design.md
hal/: a2b_i2c.c  a2b_i2c.h  a2b_timer.c  a2b_timer.h
include/: a2b.h  a2b_audio.h  a2b_build.h  a2b_clock.h  a2b_device.h  a2b_diagnostic.h  a2b_discovery.h  a2b_error.h  a2b_irq.h  a2b_logger.h  a2b_network.h  a2b_recovery.h  a2b_remote.h  a2b_slot.h  a2b_state.h  a2b_types.h  a2b_version.h
mock/: mock_ad2428.c  mock_ad2428.h  mock_i2c.c  mock_i2c.h
register/: ad2428_reg.c  ad2428_reg.h
test/: CMakeLists.txt
test/src/: test_a2b_audio.c  test_a2b_clock.c  test_a2b_device.c  test_a2b_diagnostic.c  test_a2b_discovery.c  test_a2b_error.c  test_a2b_i2c.c  test_a2b_irq.c  test_a2b_logger.c  test_a2b_network.c  test_a2b_recovery.c  test_a2b_remote.c  test_a2b_slot.c  test_a2b_state.c  test_a2b_timer.c  test_a2b_types.c  test_ad2428_reg.c  test_main.c  test_mock_ad2428.c  test_mock_i2c.c
test/unity/: unity.c  unity.h  unity_internals.h
